@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-03
+2011-08-22 Andy Salnikov
+- modified DumpPrinceton to recognize ConfigV2 objects
+
 Tag: V00-01-02
 2011-06-29 Andy Salnikov
 - update EBeamHist module to use new PSHist histogramming
